--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
   </head>
   <body>
     <script src="//gnab.github.io/remark/downloads/remark-0.7.0.min.js" type="text/javascript"></script>
-    <script type="text/javascript"
-      src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML&delayStartupUntil=configured">
-    </script>
     <script type="text/javascript">
       function getParameterByName(name, def) {
         name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
@@ -24,6 +21,8 @@
         sourceUrl: getParameterByName('slides', 'slides.md')
         //highlightLanguage: 'Python' <- does not play nicely with MathJax
       });
+    </script>
+    <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
         tex2jax: {
           skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
@@ -31,6 +30,9 @@
         }
       });
       MathJax.Hub.Configured();
+    </script>
+    <script type="text/javascript"
+      src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
