--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <script src="//gnab.github.io/remark/downloads/remark-0.7.0.min.js" type="text/javascript"></script>
+    <script src="https://remarkjs.com/downloads/remark-0.7.0.min.js" type="text/javascript"></script>
     <script type="text/javascript">
       function getParameterByName(name, def) {
         name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
